# tandoori

./: .gitignore  .replit  README.md  marinate.py  pyproject.toml  tik.py  tik.tand
tandoori/: __init__.py  handlers.py
