[tool.poetry]
name = "tandoori"
version = "0.1.0"
description = "tandoori lang python module"
authors = ["mteam88 <matthew8edelen@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
marinate = 'bin.marinate:marinate'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
